--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@types/uuid": "^9.0.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
@@ -41,6 +42,7 @@
     "sass": "^1.71.1",
     "start-server-and-test": "^2.0.3",
     "typescript": "~5.3.0",
+    "uuid": "^9.0.1",
     "vite": "^5.0.11",
     "vitest": "^1.2.2",
     "vue-tsc": "^1.8.27"
